# EchoBot

./: .env.example  .gitignore  CONTRIBUTORS.md  README.md  ROBOTS.md  docker-compose.debug.yml  docker-compose.yml  jawa.env.txt  sol wallet  start_services.py
LLM/: __init__.py  llm_init.py  llm_utils.py
config/: config.py  schedule.json
echobot/services/: youtubeChatService.ts
scripts/: check_media.py  get_youtube_refresh_token.py
scripts/scripts/: migrate_points.py
services/: news_parser.py
services/api/: Dockerfile
services/api/src/: main.py
services/chat_youtube_service/: README.md
services/chat_youtube_service/src/: api.py  chat_module.py  main.py  youtube_chat_service.py
services/chat_youtube_service/tests/: test_chat_interactive.py  test_youtube_chat_service.py
services/echopulse_service/: Dockerfile  README.md  __init__.py  audio_utils.py  generate_pulse.py  pyproject.toml
services/echopulse_service/src/: graph.py  main.py  prompts.py  state.py
services/event_notifier_service/: Dockerfile  __init__.py
services/event_notifier_service/src/: __init__.py  event_client.py  event_handler.py  main.py
services/music_service/media/: load_songs_soundcloud.py  media_service.py  soundcloud_auth.py  soundcloud_refresh.py  soundcloud_upload.py
services/music_service/music_agent/: music_graph.py  sunoapi.py
services/music_service/src/: main.py
services/news_service/: audio_utils.py  generate_news.py
services/news_service/src/: graph.py  main.py
services/obs_stream_service/core/: OBS_SETUP_GUIDE.md  ama_section.py  dj_sources_config.json  flow.py  playlist.json
services/obs_stream_service/obs/: ClientManager.py  __init__.py
tests/: test_echobot.py
video/: video_load.py
voice/: generate.py
(+17 files in other folders)
